name:                testCom
version:             0.3.0
synopsis:            Write your tests in comments
description:         With some TemplateHaskell magic, you can write your tests in your comments directly above a function declaration with a minimalistic syntax.
license:             GPL
license-file:        LICENSE
author:              Alexandre Moine
maintainer:          alexandre@moine.me
category:            Test
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
bug-reports:         https://github.com/nobrakal/testCom/issues


extra-source-files: ChangeLog README.md

source-repository head
  type:           git
  location:       git://github.com/nobrakal/testCom.git

library
  exposed-modules:     Test.TestCom
  other-modules:       Test.TestCom.Type, Test.TestCom.Parser.Parser
  build-depends:       base >=4.9 && <4.11,  
                       template-haskell >= 2.11.1.0,
                       haskell-src-meta >= 0.8.0.1,
                       random >= 1.1,
                       parsec
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       testCom,
                       base >=4.9 && <4.11,  
                       template-haskell >= 2.11.1.0

  hs-source-dirs:      tests
  default-language:    Haskell2010
